...
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">La dirección de email no es válida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es obligatorio</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para proporcionar terminaciones de
        correo electrónico."
    </string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Eliminar</string>
...
    <string name="end_date">Fecha de fin</string>
    <string name="medicine_time">Horas del medicamento</string>
    <string name="confirm_pass">Confirmar</string>
    <string name="email_exists">Ya exite un usuario con ese email</string>
    <string name="password_confirm_error">El contraseña y la confirmación no coinciden</string>
    <string name="remember_pass">Recordar contraseña</string>
    <string name="email_not_found">No existe ningún usuario con ese email</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="User">Usuario</string>
    <string name="notification_level">Nivel de notificación</string>
    <string name="all_notification">Todos los avisos</string>
    <string name="alarms_notification">Solo alarmas</string>
    <string name="not_requests">No se han entrando solicitudes pendientes.</string>
...
