...
            android:background="@android:drawable/btn_dropdown"
            android:gravity="right"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <com.stacktips.view.CustomCalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"></com.stacktips.view.CustomCalendarView>

    <LinearLayout
        android:layout_width="match_parent"
...
